@@ -4,7 +4,14 @@ Release 3.5.14
 Bugs fixed
 ----------
 
-- Fix use of named arguments with `ExtractDelegator` (issue #1048).
+- Fixed use of named arguments with `ExtractDelegator` (issue #1048).
+
+- `rpy2py` conversion rules in `numpy2ri` could convert R `list` objects into
+  :class:`rpy2.containers.rlike.OrdDict` but there were no `py2rpy` rules
+  to perform the reverse conversion (issue #944).
+
+- :meth:`rpy2.robjects.vectors.ListVector.from_length` was incorrectly
+  calling the conversion rules before returning the :class:`ListVector`.
 
 
 Release 3.5.13
